[package]
name = "readformat"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tudbut/readformat"
license = "MIT"
description = "Very small format reader"
keywords = [
    "readf",
    "format",
    "parser",
    "reader",
    "formatting",
]
categories = [
    "parser-implementations",
    "encoding",
    "parsing",
    "text-processing"
]

[dependencies]
